# mcp-kaspa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  test_connection.py
.github/workflows/: publish.yml
core/: client.py
src/: __init__.py  main.py
src/core/: client.py  config.py
tests/: test_kaspa_client.py
